--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3'
 services:
-  # https://github.com/zxbu/webdav-aliyundriver
   webdav-aliyundriver:
-    image: zx5253/webdav-aliyundriver
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: webdav-aliyundriver
     restart: always
     volumes:
