--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,12 @@
             <artifactId>crypto</artifactId>
             <version>4.8.8</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
