--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,10 @@ logging:
 aliyundrive:
   auth:
     enable: true
-    user-name: admin
+    username: admin
     password: admin
-  work-dir: ./
 
 server:
   tomcat:
     connection-timeout: 1d
+  port: 8080
