--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -55,22 +55,12 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - uses: actions/setup-java@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-          tags: |
-            eritpchy/webdav-aliyundriver:latest
-            eritpchy/webdav-aliyundriver:${{ steps.date.outputs.today }}
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'gradle'
+      - name: Run build with Gradle Wrapper
+        run: ./gradlew :bootBuildImage --publishImage=true
