--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -63,4 +63,16 @@ jobs:
           java-version: '17'
           cache: 'gradle'
       - name: Run build with Gradle Wrapper
-        run: chmod +x ./gradlew;./gradlew :bootBuildImage --publishImage=true
+        run: chmod +x ./gradlew;./gradlew :bootBuildImage
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Push to Docker Hub
+        run: docker push eritpchy/webdav-aliyundriver:latest
+      - name: Push to Docker Hub
+        run: docker push eritpchy/webdav-aliyundriver:2.4.0-${{ steps.date.outputs.today }}
+
+
