--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,10 @@ on:
         required: true
         default: 'warning'
       tags:
-        description: 'Test scenario tags'  
+        description: 'Test scenario tags'
+
+env:
+  TZ: Asia/Shanghai
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -34,7 +37,7 @@ jobs:
       - 
         name: Get current date
         id: date
-        run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
+        run: echo "::set-output name=today::$(date +'%Y%m%d')"
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -70,9 +73,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # Set VERSION_INFORMATION
+      - run: echo "VERSION_INFORMATION=$(${{github.workspace}}/gradlew -q ciPrintVersionInformation)" >> $GITHUB_ENV
       - name: Push to Docker Hub
         run: docker push eritpchy/webdav-aliyundriver:latest
       - name: Push to Docker Hub
-        run: docker push eritpchy/webdav-aliyundriver:2.4.0-${{ steps.date.outputs.today }}
+        run: docker push eritpchy/webdav-aliyundriver:${{ env.VERSION_INFORMATION }}-${{ steps.date.outputs.today }}
 
 
