--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     volumes:
       - /etc/localtime:/etc/localtime
-      - ./docker/etc/aliyun-driver/:/workspace/etc/aliyun-driver/
+      - ./docker/conf:/conf
     ports:
       - "8080:8080"
     tty: true
