--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: aliyundriver-Build
+name: Build Docker Image
 
 # Controls when the action will run. 
 on:
@@ -29,35 +29,23 @@ env:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   buildx:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.target.os }}
+    strategy:
+      matrix:
+        target:
+          - { os: self-hosted, arch: arm64, suffix: linux }
+          - { os: ubuntu-22.04, arch: amd64, suffix: linux }
     steps:
       -
         name: Checkout
         uses: actions/checkout@v3
-      - 
-        name: Get current date
-        id: date
-        run: echo "::set-output name=today::$(date +'%Y%m%d')"
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
-      -
-        name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+        name: Fixup docker permission denied
+        run: sudo chmod 777 /var/run/docker.sock
+        if: matrix.target.os == 'self-hosted'
       -
         name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
-      - 
-        name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
       -
         name: Setup Gradle
         uses: gradle/gradle-build-action@v2
@@ -78,15 +66,27 @@ jobs:
       -
         run: echo "VERSION_INFORMATION=$(${{github.workspace}}/gradlew -q ciPrintVersionInformation)" >> $GITHUB_ENV
       -
-        name: Build and push
-        uses: docker/build-push-action@v2
+        name: Build Docker Image
+        run: docker build -t eritpchy/webdav-aliyundriver:${{ env.VERSION_INFORMATION }}-${{ matrix.target.arch }} .
+      -
+        name: Push Docker Image
+        run: docker push eritpchy/webdav-aliyundriver:${{ env.VERSION_INFORMATION }}-${{ matrix.target.arch }}
+  publish:
+    needs: buildx
+    runs-on: ubuntu-22.04
+    steps:
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-          tags: |
-            eritpchy/webdav-aliyundriver:latest
-            eritpchy/webdav-aliyundriver:${{ env.VERSION_INFORMATION }}-${{ steps.date.outputs.today }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Create Docker Manifest
+        run: |
+          docker manifest create eritpchy/webdav-aliyundriver:latest \
+          --amend eritpchy/webdav-aliyundriver:2.4.0-amd64 \
+          --amend eritpchy/webdav-aliyundriver:2.4.0-arm64
+      -
+        name: Push Docker Manifest
+        run: docker manifest push eritpchy/webdav-aliyundriver:latest
